# tcc_etl

./: .dockerignore  .env.example  .gitignore  .hadolint.yaml  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  samconfig.toml  template.local.yaml  template.yaml
.github/: dependabot.yml
.github/workflows/: cd.yml  ci.yml  codeql.yml  dependency-review.yml  release.yml  security.yml
docker/: Dockerfile  Dockerfile.pypy
notebooks/: EDA.ipynb
src/tcc_etl/: __init__.py  data_card.py  extract.py  imputation.py  loader.py  main.py  pipeline.py  transform.py
src/tcc_etl/config/: __init__.py  settings.py
src/tcc_etl/extract/: __init__.py  base.py  file_extractor.py  http_extractor.py
src/tcc_etl/load/: __init__.py  base.py  s3_loader.py
src/tcc_etl/transform/: __init__.py  base.py  dataframe_transformer.py  numeric.py
tests/: conftest.py  test_extract.py  test_imputation.py  test_load.py  test_pipeline.py  test_settings.py  test_transform.py
