[project]
name = "tcc-etl"
version = "0.1.0"
description = "High-performance Python ETL pipeline: extract data, transform it, and load it into S3"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["etl", "s3", "data-pipeline", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "boto3>=1.37.7",
    "fredapi>=0.5",
    "pandera[polars]>=0.20",
    "polars>=1.0.0",
    "python-dotenv>=1.0",
    "yfinance>=0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcc_etl"]

# ---------------------------------------------------------------------------
# uv
# ---------------------------------------------------------------------------
[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "moto[s3]>=5.0.27",
    "pytest>=8.3.5",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.10",
]

# ---------------------------------------------------------------------------
# ruff
# ---------------------------------------------------------------------------
[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "ANN",   # flake8-annotations
    "N",     # pep8-naming
    "A",     # flake8-builtins (catches shadowing built-ins like format)
    "ASYNC", # flake8-async best practices
    "RUF",   # Ruff-specific rules
]
ignore = [
    "S101",   # Use of `assert` detected (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["tcc_etl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false

# ---------------------------------------------------------------------------
# pyrefly (type checking)
# ---------------------------------------------------------------------------
# ---------------------------------------------------------------------------
# pytest
# ---------------------------------------------------------------------------
[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=tcc_etl",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v",
]
pythonpath = ["src"]

# ---------------------------------------------------------------------------
# coverage
# ---------------------------------------------------------------------------
[tool.coverage.run]
source = ["tcc_etl"]
omit = ["tests/*", "src/tcc_etl/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "raise NotImplementedError",
]

# ---------------------------------------------------------------------------
# taskipy
# ---------------------------------------------------------------------------
[tool.taskipy.tasks]
lint      = { cmd = "ruff check src tests",              help = "Run ruff linter" }
fmt       = { cmd = "ruff format src tests",             help = "Format code with ruff" }
fmt-check = { cmd = "ruff format --check src tests",     help = "Check formatting without modifying files" }
typecheck = { cmd = "pyrefly check",                     help = "Run pyrefly type checker" }
test      = { cmd = "pytest",                            help = "Run tests with coverage" }
test-fast = { cmd = "pytest --no-cov -x",               help = "Run tests quickly (no coverage)" }
ci        = { cmd = "task lint && task fmt-check && task test", help = "Full CI check: lint + format + test" }
all       = { cmd = "task fmt && task lint && task typecheck && task test", help = "Format, lint, typecheck, and test" }
