[project]
name = "tcc-etl"
version = "0.1.0"
description = "High-performance Python ETL pipeline: extract data, transform it, and load it into S3"
readme = "README.md"
requires-python = ">=3.12"
license = { text = "MIT" }
keywords = ["etl", "s3", "data-pipeline", "performance"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Libraries :: Python Modules",
]

dependencies = [
    "boto3>=1.37.7",
    "numpy>=1.26",
    "pandera[polars]>=0.20",
    "polars>=1.0.0",
    "httpx>=0.27",
    "pyarrow>=15.0",
    "statsmodels>=0.14",
    "blake3>=1.0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/tcc_etl"]

[tool.uv]
default-groups = ["dev"]

[dependency-groups]
dev = [
    "aws-sam-cli",
    "moto[s3]>=5.1.22",
    "pyrefly>=0.16.1",
    "pytest>=8.3.5",
    "pytest-asyncio>=0.24",
    "pytest-cov>=6.0.0",
    "pytest-mock>=3.14.0",
    "ruff>=0.9.10",
    "taskipy>=1.14",
]


[tool.ruff]
src = ["src"]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # Pyflakes
    "I",     # isort
    "B",     # flake8-bugbear
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "S",     # flake8-bandit (security)
    "ANN",   # flake8-annotations
    "N",     # pep8-naming
    "A",     # flake8-builtins (catches shadowing built-ins like format)
    "ASYNC", # flake8-async best practices
    "RUF",   # Ruff-specific rules
]
ignore = [
    "S101", # Use of `assert` detected (needed in tests)
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ANN", "S"]

[tool.ruff.lint.isort]
known-first-party = ["tcc_etl"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false


[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = [
    "--cov=tcc_etl",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-fail-under=80",
    "-v",
]
pythonpath = ["src"]

[tool.coverage.run]
source = ["tcc_etl"]
omit = ["tests/*", "src/tcc_etl/__init__.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "raise NotImplementedError",
]


[tool.taskipy.tasks]
lint = { cmd = "ruff check src tests", help = "Run ruff linter" }
fmt = { cmd = "ruff format src tests", help = "Format code with ruff" }
fmt-check = { cmd = "ruff format --check src tests", help = "Check formatting without modifying files" }
typecheck = { cmd = "pyrefly check", help = "Run pyrefly type checker" }
test = { cmd = "pytest", help = "Run tests with coverage" }
test-fast = { cmd = "pytest --no-cov -x", help = "Run tests quickly (no coverage)" }
run-local = { cmd = "S3_BUCKET=local uv run python -c 'from tcc_etl.main import handler; import json; print(json.dumps(handler({}, None), indent=2))'", help = "Run the ETL pipeline locally (no Docker), writes test.parquet to cwd" }
sam-build = { cmd =  "uv run sam build", help = "Build Lambda image with SAM (arm64, for production deployment)" }
sam-invoke = { cmd = "uv run sam build --template template.local.yaml && uv run sam local invoke TccEtlFunction -e events/invoke.json", help = "Build (x86_64) and invoke Lambda locally, no LocalStack" }
sam-local = { cmd = "docker compose up -d localstack && uv run sam build --template template.local.yaml && uv run sam local invoke TccEtlFunction -e events/invoke.json --env-vars env.json", help = "Build (x86_64) and invoke Lambda locally against LocalStack" }
sam-deploy = { cmd = "uv run sam deploy", help = "Deploy stack to AWS via SAM" }
local-down = { cmd = "docker compose down -v", help = "Stop and remove local containers and volumes" }
local-logs = { cmd = "docker compose logs -f localstack", help = "Tail LocalStack logs" }
ci = { cmd = "task lint && task fmt-check && task test", help = "Full CI check: lint + format + test" }
all = { cmd = "task fmt && task lint && task typecheck && task test", help = "Format, lint, typecheck, and test" }
